fixed blurry images

--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -402,7 +402,7 @@ a.movie-item:hover {
 
 /* NEW CSS CODE BY ME*/
 .movie-item-wrapper {
-    width: 55%;
+    width: 90%;
     margin: 0 auto;
     position: relative;
   }
